--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,10 @@
     <app-sidebar
       id="sideBar"
       class="col-sm-3 col-md-2 d-none d-sm-block sidebar">
-  </app-sidebar>
-    <div class="col-sm-9" id="dashboard">
+    </app-sidebar>
+
+    <div class="col-sm-9 ml-sm-auto col-md-10 pt-3" id="dashboard">
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
