--- a/src/app/charts/pie-chart/pie-chart.component.html
+++ b/src/app/charts/pie-chart/pie-chart.component.html
@@ -1,1 +1,8 @@
-<p>pie-chart works!</p>
+<div class="chart">
+  <canvas baseChart
+    [data] = "pieChartData"
+    [colors] = "colors"
+    [labels] = "pieChartLabels"
+    [chartType] = "pieChartType">
+  </canvas>
+</div>
