--- a/src/app/sections/section-sales/section-sales.component.html
+++ b/src/app/sections/section-sales/section-sales.component.html
@@ -19,11 +19,21 @@
       </div>
       <div class="card mb-3 shadow card-theme">
         <div class="card-header card-header-theme">
-          <h5>Orders by Country</h5>
+          <h5>Orders by State</h5>
         </div>
         <div class="card-body">
-          <app-line-chart></app-line-chart>
+          <app-pie-chart></app-pie-chart>
         </div>
+      </div>
+    </div>
+  </div>
+  <div class="row-fluid cards">
+    <div class="card shadow card-theme card-bottom">
+      <div class="card-header card-header-theme">
+        <h5>Monthly Sales by Product</h5>
+      </div>
+      <div class="card-body">
+        <app-line-chart></app-line-chart>
       </div>
     </div>
   </div>
