--- a/src/app/sections/section-health/server/server.component.html
+++ b/src/app/sections/section-health/server/server.component.html
@@ -3,8 +3,8 @@
     {{ serverInput.name }}
   </div>
   <div class="card-body status">
-    {{ serverInput.isOnline }}
-  </div>
-  <button (click)="toggleStatus(serverInput.isOnline)"
+    {{ serverStatus }}
+    <button (click)="sendServerAction(serverInput.isOnline)"
     class="btn btn-default action">{{ buttonText }}</button>
+  </div>
 </div>
